<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="fr.miashs.uga.picannotation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_annotation"
        android:name="fr.miashs.uga.picannotation.ui.annotation.AnnotationFragment"
        android:label="@string/title_annotation"
        tools:layout="@layout/fragment_annotation" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="fr.miashs.uga.picannotation.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
</navigation>